--- a/app/views/admin_events/_form.html.haml
+++ b/app/views/admin_events/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @event, url: events_path do |f|
+= form_for @event, url: url, method: method do |f|
   %div
     = f.label :title
     = f.text_field :title
@@ -18,4 +18,7 @@
       - @event.errors[:number_of_tickets].each do |error|
         %li= error
   %div
-    = f.submit
+    = f.submit value: "Update" do
+      = submit_button
+    = f.submit value: "publish" do
+      Publish
