--- a/app/views/admin_events/new.html.haml
+++ b/app/views/admin_events/new.html.haml
@@ -1,1 +1,3 @@
-= render partial: 'form', locals: { url: { controller: 'admin_events', action: 'create' }, method: :post, submit_button: 'Create' }
+.row
+  .col-sm-6.offset-sm-3
+    = render partial: 'form', locals: { url: { controller: 'admin_events', action: 'create' }, method: :post, submit_button: 'Create' }
