--- a/app/views/admin_events/edit.html.haml
+++ b/app/views/admin_events/edit.html.haml
@@ -1,1 +1,3 @@
-= render partial: 'form', locals: { url: admin_event_path(@event.id), method: :put, submit_button: 'Update' }
+.row
+  .col-sm-6.offset-sm-3
+    = render partial: 'form', locals: { url: admin_event_path(@event.id), method: :put, submit_button: 'Update' }
