--- a/app/views/admin_events/index.html.haml
+++ b/app/views/admin_events/index.html.haml
@@ -1,31 +1,35 @@
-%table
-  %thead
-    %tr
-      %th
-        Title
-      %th
-        Description
-      %th
-        Total number of tickets
-      %th
-        Published
-      %th
-        Action
-  %tbody
-    - @events.each do |event|
-      %tr
-        %td
-          = event.title
-        %td
-          = event.description
-        %td
-          = event.total_number_of_tickets
-        %td
-          = event.published? ? 'yes' : 'no'
-        %td
-          - if event.published?
-            = link_to 'Tickets', admin_event_path(event.id)
-          - else
-            = link_to 'Edit', edit_admin_event_path(event.id)
-%div
-  = link_to "New", new_admin_event_path
+.row
+  .col-sm-12
+    %h1.mb-4
+      Admin events
+    %table.table.table-hover.mb-2
+      %thead.thead-dark
+        %tr
+          %th
+            Title
+          %th
+            Description
+          %th
+            Total number of tickets
+          %th
+            Published
+          %th
+            Action
+      %tbody
+        - @events.each do |event|
+          %tr
+            %td
+              = event.title
+            %td
+              = event.description
+            %td
+              = event.total_number_of_tickets
+            %td
+              = event.published? ? 'yes' : 'no'
+            %td
+              - if event.published?
+                = link_to 'Tickets', admin_event_path(event.id)
+              - else
+                = link_to 'Edit', edit_admin_event_path(event.id)
+    .clearfix
+      = link_to 'New', new_admin_event_path, class: 'btn btn-primary float-right'
