--- a/app/views/admin_events/show.html.haml
+++ b/app/views/admin_events/show.html.haml
@@ -4,5 +4,5 @@
 %p
   = @event.description
 %p
-  Total number of tickets:
-  = @event.total_number_of_tickets
+  Total places:
+  = @event.total_places
