--- a/app/views/admin_events/index.html.haml
+++ b/app/views/admin_events/index.html.haml
@@ -10,7 +10,7 @@
           %th
             Description
           %th
-            Total number of tickets
+            Places
           %th
             Published
           %th
@@ -23,7 +23,7 @@
             %td
               = event.description
             %td
-              = event.total_number_of_tickets
+              = "#{event.free_places}/#{event.total_places}"
             %td
               = event.published? ? 'yes' : 'no'
             %td
