--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
+            <%= link_to 'Tickets scanner', tickets_scanner_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
             <%= link_to 'Admin', admin_events_path, class: 'nav-link' %>
           </li>
         </ul>
